[tool.poetry]
name = "pulsar_classifier"
version = "0.1.0"
description = "Classifier for pulsar stars"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
scikit-learn = "^1.2"
flask = "^2.2"

[tool.poetry.dev-dependencies]
ipython = "^8.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
