[tool.poetry]
name = "pulsar-classifier"
version = "0.1.0"
description = "Classificador d'estels púlsar"
authors = ["Daiana Ventrice"]
packages = [{ include = "pulsar_classifier", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4"
flask = "^3.0"
pandas = "^2.2"
numpy = "^1.26"

[tool.poetry.dev-dependencies]
ipython = "^8.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
